Able to differentiate between and answer click and wether or not it's correct

--- a/index.html
+++ b/index.html
@@ -21,21 +21,18 @@
             <div id="main-container" class="container">
                 <div class="header">
                     <div class="to-scores">
-                        <h3 id="scores-link">View Scores</h3>
+                        <h3>View Scores</h3>
                     </div>
                     <div class="time">
                         <span>Time:</span>
                     </div>
                 </div>
                 <div class="quiz-body">
-                    <div data-question="0" class="question">
-                        <p>Commonly used data types do not include:</p>
-                    </div>
-                    <div class="answers">
-                        <p data-answer="a"><span class="letters">A:</span> Boolean</p>
-                        <p data-answer="b"><span class="letters">B:</span> Alert</p>
-                        <p data-answer="c"><span class="letters">C:</span> Number</p>
-                        <p data-answer="d"><span class="letters">C:</span> String</p>
+                    <div class="intro">
+                        <h1>Coding Quize Challenge</h1>
+                        <p>Let's awenser some code related questions.
+                        Test your knowledge and see if you have what it takes to become a web developer</p>
+                        <button id="begin-btn">Begin Quiz</button>
                     </div>
                 </div>
             </div>
