Work on player submition

--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
                         <h3>View Scores</h3>
                     </div>
                     <div class="time">
-                        <span>Time:</span>
+                        <span>Time: </span><span id="min">00:</span><span id="sec">00</span>
+                        <span id="end"></span>
                     </div>
                 </div>
                 <div class="quiz-body">
                     <div class="intro">
-                        <h1>Coding Quize Challenge</h1>
+                        <h1>Coding Quiz Challenge</h1>
                         <p>Let's awenser some code related questions.
                         Test your knowledge and see if you have what it takes to become a web developer</p>
                         <button id="begin-btn">Begin Quiz</button>
