Saving tester score to local storage

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
         <main id="main">
             <div id="main-container" class="container">
                 <div class="header">
-                    <div class="to-scores">
-                        <h3>View Scores</h3>
+                    <div  id="to-scores" class="to-scores">
+                        <h3 data-score="scores">View Scores</h3>
                     </div>
                     <div class="time">
                         <span>Time: </span><span id="min">00:</span><span id="sec">00</span>
                         <span id="end"></span>
                     </div>
                 </div>
-                <div class="quiz-body">
+                <div id="quiz-body" class="quiz-body">
                     <div class="intro">
                         <h1>Coding Quiz Challenge</h1>
                         <p>Let's awenser some code related questions.
@@ -38,6 +38,10 @@
                 </div>
             </div>
         </main>
+
+        <div>
+            <img src="">
+        </div>
         
         <script src="./assets/js/app.js" async defer></script>
     </body>
