--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 </div>
                 <div id="quiz-body" class="quiz-body">
                     <div class="intro">
-                        <h1>Coding Quiz Challenge</h1>
-                        <p>Let's awenser some code related questions.
-                        Test your knowledge and see if you have what it takes to become a web developer</p>
+                        <h1>Quiz Challenge</h1>
+                        <p>Let's test your knowledge.
+                        Hone your skills and see if you have what it takes.</p>
                         <button id="begin-btn">Begin Quiz</button>
                     </div>
                 </div>
